template uses google cdn

--- a/events/bubble_zero.html
+++ b/events/bubble_zero.html
@@ -1,4 +1,5 @@
 <!-- bubble.html (see jQuery in Action, p. 89) -->
+<!DOCTYPE html>
 <html id="greatgreatgrandpa">
   <head>
     <title>Event propagation example (DOM Level 0)</title>
